--- a/EveIndyBoss/packages.config
+++ b/EveIndyBoss/packages.config
@@ -5,6 +5,7 @@
   <package id="eZet.EveLib.Core" version="3.0.0" targetFramework="net452" />
   <package id="eZet.EveLib.EveCentral" version="3.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="reactiveui" version="6.5.0" targetFramework="net452" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
