--- a/EveIndyBoss/EveIndyBoss.csproj
+++ b/EveIndyBoss/EveIndyBoss.csproj
@@ -134,6 +134,7 @@
     </ApplicationDefinition>
     <Compile Include="AppBootstrapper.cs" />
     <Compile Include="Infrastructure\Constants.cs" />
+    <Compile Include="Infrastructure\DbConnectionExtensions.cs" />
     <Compile Include="Infrastructure\EveIndyModule.cs" />
     <Compile Include="Infrastructure\MyViewLocator.cs" />
     <Compile Include="Infrastructure\NinjectResolver.cs" />
@@ -142,6 +143,7 @@
     <Compile Include="Services\EveCentralPriceService.cs" />
     <Compile Include="Services\PriceService.cs" />
     <Compile Include="Services\Solver.cs" />
+    <Compile Include="Services\StaticDataService.cs" />
     <Compile Include="ViewModels\MenuViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="ViewModels\TestViewModel.cs" />
@@ -195,11 +197,16 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="staticdata.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\StaticData\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.101.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.101.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
