--- a/EveIndyBoss/packages.config
+++ b/EveIndyBoss/packages.config
@@ -1,11 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Conditions" version="2.0.1" targetFramework="net452" />
   <package id="Dapper" version="1.50.0-beta9" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
-  <package id="eZet.EveLib.Core" version="3.0.0" targetFramework="net452" />
+  <package id="eZet.EveLib" version="3.0.0.0" targetFramework="net452" />
+  <package id="eZet.EveLib.Core" version="3.0.6.0" targetFramework="net452" />
+  <package id="eZet.EveLib.Element43" version="3.0.0" targetFramework="net452" />
+  <package id="eZet.EveLib.EveAuth" version="3.0.1.0" targetFramework="net452" />
   <package id="eZet.EveLib.EveCentral" version="3.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net452" />
+  <package id="eZet.EveLib.EveCrest" version="3.4.0.0" targetFramework="net452" />
+  <package id="eZet.EveLib.EveMarketData" version="3.0.0" targetFramework="net452" />
+  <package id="eZet.EveLib.EveWho" version="3.1.0.0" targetFramework="net452" />
+  <package id="eZet.EveLib.EveXml" version="3.0.7.0" targetFramework="net452" />
+  <package id="eZet.EveLib.StaticData" version="3.0.0" targetFramework="net452" />
+  <package id="eZet.EveLib.ZKillboard" version="3.0.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
+  <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
   <package id="reactiveui" version="6.5.0" targetFramework="net452" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
